--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,13 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".MainActivity3"
+            android:name=".TelaProdutos"
             android:exported="false" />
         <activity
-            android:name=".MainActivity2"
+            android:name=".TelaLogin"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".TelaInicial"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
